adjusted functions to scale and fixed animation jumping

--- a/src/index.css
+++ b/src/index.css
@@ -164,10 +164,11 @@ svg {
 }
 
 #mynetwork {
+    background-color: white;
     position: absolute;
-    top: 8%;
+    bottom: 0%;
     left: 0%;
-    width: 78%;
-    height: 85%;
+    width: 64%;
+    height: 94%;
     border: 1px solid black;
 }
